# casymir_public

./: .gitignore  LICENSE  README.md  bct_test_output.xlsx  example.py  example_bct.yaml  example_dbt.yaml  parallel_logic_test.py  pyproject.toml  requirements.txt  run_casymir.py  setup.py
casymir/: casymir.py  fk_general.py  parallel.py  processes.py  tk_general.py
casymir/data/: CsI.yaml  default_matls.txt  user_matls.yaml
casymir/data/detectors/: CsI.yaml  Se.yaml
casymir/data/materials/: carbon_fiber.yaml  mg_ha.yaml  pmma.yaml  silica.yaml  silicon_dioxide.yaml  type1_mc.yaml  type2_mc.yaml
tests/: test_detector.py  test_integration.py  test_parallel.py  test_signal.py  test_spectrum.py  test_system.py  test_tube.py
